# fluxengine

./: .appveyor.yml  .bazelrc  .clang-format  .gitignore  .gitmodules  .hgignore  .travis.yml  BUILD  COPYING.md  FluxEngine.icns  LICENSE  Makefile  README.md  WORKSPACE  build.lua  build.ninja  build.py  cmd_brotherdecode.c  cmd_decode.c  cmd_fluxdump.c  cmd_fmdecode.c  cmd_getclock.c  cmd_mfmdecode.c  cmd_read.c  cmd_testpattern.c  cmd_usbbench.c  cmd_write.c  config.py  defs.bzl  encoder.c  fluxmap.c  globals.h  main.c  makeapp.sh  meson.build  mkninja.sh  protocol.h  sql.c  sql.h  unix.c  (+2 more)
dep/agg/: BUILD  README.md  build.lua  build.mk  build.py  meson.build
dep/agg/include/: agg2d.h  agg_alpha_mask_u8.h  agg_arc.h  agg_array.h  agg_arrowhead.h  agg_basics.h  agg_bezier_arc.h  agg_bitset_iterator.h  agg_blur.h  agg_bounding_rect.h  agg_bspline.h  agg_clip_liang_barsky.h  agg_color_gray.h  agg_color_rgba.h  agg_config.h  agg_conv_adaptor_vcgen.h  agg_conv_adaptor_vpgen.h  agg_conv_bspline.h  agg_conv_clip_polygon.h  agg_conv_clip_polyline.h  agg_conv_close_polygon.h  agg_conv_concat.h  agg_conv_contour.h  agg_conv_curve.h  agg_conv_dash.h  agg_conv_gpc.h  agg_conv_marker.h  agg_conv_marker_adaptor.h  agg_conv_segmentator.h  agg_conv_shorten_path.h  agg_conv_stroke.h  (+96 more)
dep/fmt/: BUILD  UPSTREAM.md  build.lua  build.mk  build.py  meson.build
dep/libusbp/: .dir-locals.el  BUILD  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.txt  PLATFORM_NOTES.md  README.md  THREADS.md  UPSTREAM.md  build.lua  build.mk  build.py  meson.build
dep/snowhouse/: CMakeLists.txt  README.md  UPSTREAM.md  build.lua  build.py  meson.build
dep/stb/: BUILD  UPSTREAM.md  build.lua  build.mk  build.py  meson.build  stb_image_write.h
src/: BUILD  build.lua  build.mk  build.py  fe-analysedriveresponse.cc  fe-analyselayout.cc  fe-convert.cc  fe-cwftoflux.cc  fe-erase.cc  fe-fluxfilecp.cc  fe-fluxfilels.cc  fe-fluxfilerm.cc  fe-fluxtoau.cc  fe-fluxtoscp.cc  fe-fluxtovcd.cc  fe-format.cc  fe-getdiskinfo.cc  fe-getfile.cc  fe-getfileinfo.cc  fe-image.cc  fe-inspect.cc  fe-ls.cc  fe-merge.cc  fe-mkdir.cc  fe-mv.cc  fe-putfile.cc  fe-rawread.cc  fe-rawwrite.cc  fe-read.cc  fe-readacorn.cc  fe-readadfs.cc  fe-readaeslanier.cc  fe-readamiga.cc  fe-readampro.cc  fe-readapple2.cc  fe-readatarist.cc  fe-readbrother.cc  fe-readc64.cc  fe-readdfs.cc  fe-readf85.cc  (+42 more)
src/formats/: 40track_drive.textpb  40trackdrive.textpb  BUILD  _acornadfs32.textpb  _acornadfs8.textpb  _apple2.textpb  _atari.textpb  _commodore1541.textpb  _global_options.textpb  _micropolis.textpb  _mx.textpb  _northstar.textpb  acornadfs.textpb  acornadfs160.textpb  acornadfs1600.textpb  acornadfs320.textpb  acornadfs640.textpb  acornadfs800.textpb  acorndfs.textpb  aeslanier.textpb  agat.textpb  agat840.textpb  amiga.textpb  ampro.textpb  ampro400.textpb  ampro800.textpb  apple2.textpb  apple2_drive.textpb  apple2drive.textpb  appledos.textpb  appleii140.textpb  appleii640.textpb  atarist.textpb  atarist360.textpb  atarist370.textpb  atarist400.textpb  atarist410.textpb  atarist720.textpb  atarist740.textpb  atarist800.textpb  (+91 more)
src/gui/: browserpanel.cc  build.lua  build.mk  build.py  context.cc  context.h  customstatusbar.cc  customstatusbar.h  explorerpanel.cc  filesystemmodel.cc  filesystemmodel.h  fileviewerwindow.cc  fileviewerwindow.h  fluxviewercontrol.cc  fluxviewercontrol.h  fluxviewerwindow.cc  fluxviewerwindow.h  gui.h  hexviewerwindow.cc  hexviewerwindow.h  histogramviewer.cc  histogramviewer.h  icon.png.h  iconbutton.cc  iconbutton.h  idlepanel.cc  imagerpanel.cc  jobqueue.cc  jobqueue.h  layout.cpp  layout.fbp  layout.h  main.cc  mainwindow.cc  mainwindow.h  manifest.xml  meson.build  texteditorwindow.cc  texteditorwindow.h  textviewerwindow.cc  (+11 more)
src/gui2/: abstractsectorview.cc  abstractsectorview.h  build.py  configview.cc  configview.h  controlpanelview.cc  controlpanelview.h  customview.cc  customview.h  datastore.cc  datastore.h  default_paths.cpp  diskprovider.cc  diskprovider.h  driveConfigurationForm.ui  drivecomponent.cc  drivecomponent.h  exerciserview.cc  exerciserview.h  filer.ui  fluxConfigurationForm.ui  fluxcomponent.cc  fluxcomponent.h  fluxengine.cc  fluxview.cc  fluxview.h  fluxvisualiserwidget.cc  fluxvisualiserwidget.h  formatcomponent.cc  formatcomponent.h  frame.ui  frametest.cc  globals.h  gui.cc  imagecomponent.cc  imager.ui  imageview.cc  imageview.h  imagevisualiserwidget.cc  logview.cc  (+24 more)
src/readables/: acornadfs.textpb  acorndfs.textpb  aeslanier.textpb  amiga.textpb  ampro.textpb  apple2.textpb  atarist.textpb  atarists.textpb  brother.textpb  c64.textpb  commodore1541.textpb  commodore1581.textpb  eco1.textpb  f85.textpb  fb100.textpb  ibm.textpb  macintosh.textpb  micropolis.textpb  mx.textpb  northstar.textpb  northstar175.textpb  northstar350.textpb  northstar87.textpb  tids990.textpb  victor9k.textpb  zilogmcz.textpb
src/writables/: amiga.textpb  atarist360.textpb  atarist370.textpb  atarist400.textpb  atarist410.textpb  atarist720.textpb  atarist740.textpb  atarist800.textpb  atarist820.textpb  brother120.textpb  brother240.textpb  commodore1541.textpb  commodore1581.textpb  hplif770.textpb  ibm1200_525.textpb  ibm1440.textpb  ibm180_525.textpb  ibm360.textpb  ibm360_525.textpb  ibm720.textpb  ibm720_525.textpb  macintosh.textpb  macintosh400.textpb  macintosh800.textpb  northstar175.textpb  northstar350.textpb  northstar87.textpb  tids990.textpb
tests/: agg.cc  amiga.cc  applesauce.cc  applesingle.cc  betterassert.h  bitaccumulator.cc  build.lua  build.mk  build.py  bytes.cc  compression.cc  configs.cc  cpmfs.cc  crunch.cc  csvreader.cc  dataspec.cc  flags.cc  fluxmapreader.cc  fluxpattern.cc  flx.cc  fmmfm.cc  greaseweazle.cc  kmedian.cc  kryoflux.cc  layout.cc  ldbs.cc  locations.cc  meson.build  options.cc  proto.cc  testproto.proto  testproto.textpb  tests.h  utils.cc  vfs.cc
tests/docker/: Dockerfile.debian11  Dockerfile.debian12  Dockerfile.debian13  Dockerfile.fedora40  Dockerfile.fedora41  Dockerfile.fedora42  Dockerfile.fedora43  Dockerfile.fedora43.nooptionaldeps  Dockerfile.manjaro
(+798 files in other folders)
